# rem-recon-deterministic-equivalence-proof

./: .gitignore  README.md  pyproject.toml
auditor_report/: REM_Recon_Verification_Report.md
data/: injected_breaks.json
rem_recon/: __init__.py  hashing.py  io.py  recon.py  reducer.py  verify.py
scripts/: generate_synthetic_data.py  make_no_data_proof_pdf.py  run_proof.py  verify_proof.py
