[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rem-recon-proof"
version = "0.1.0"
description = "REM-Recon deterministic reconciliation equivalence proof (neutral synthetic data)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.setuptools]
packages = ["rem_recon"]
